--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "At least it's better than lodash",
   "main": "index.js",
   "scripts": {
-    "test": "exit 1"
+    "test": "mocha test.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/Sieabah/blodash#readme",
   "dependencies": {
     "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "mocha": "^3.3.0",
+    "should": "^11.2.1"
   }
 }
