--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "lodash": "^4.17.4",
     "glob": "^7.1.2",
     "mocha": "^3.2.0",
     "should": "^11.2.1",
